--- a/RobotLovesKitty.html
+++ b/RobotLovesKitty.html
@@ -4,29 +4,34 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Robot Loves Kitty</title>
 		<link rel="stylesheet" href="RobotLovesKitty.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 		<script type = "text/javascript" src = "RobotLovesKitty.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	</head>
 
 	<body>
 		<div id="left-border"></div>
 		<div id="right-border"></div>
 		<div id="container1">
-			<img id="logo" src="rlk.gif"></img>
-		</div>	
-
-		<div id="container2">
-			<div id="bubble1">
-				<p id="label1">Main Page</p>
-			</div>
-			<div id="bubble2">
-				<p id="label2">Game Showcase</p>
-			</div>
-			<div id="bubble3">
-				<p id="label3">Contact</p>
-			</div>
-			<div id="bubble4">
-				<p id="label4">Social Media</p>
+			<img id="logo" src="res/img/rlk.gif"></img>
+			<div id="container2">
+				<div id="bubble1" class="grow_shrink">
+					<p id="label1">Main Page</p>
+				</div>
+				<div id="bubble2" class="grow_shrink">
+					<p id="label2">Games</p>
+				</div>
+				<div id="bubble3" class="grow_shrink">
+					<p id="label3">Contact</p>
+				</div>
+				<div id="bubble4" class="grow_shrink">
+					<p id="label4">Social Media</p>
+				</div>
+				<div id="container3">
+					<iframe id="main_page" class="site_content" src="res/doc/main_page"></iframe>
+					<iframe id="games" class="site_content" src="res/doc/games"></iframe>
+					<iframe id="contact" class="site_content" src="res/doc/contact"></iframe>
+					<iframe id="socials" class="site_content" src="res/doc/socials"></iframe>
+				</div>
 			</div>
 		</div>
 	</body>
