--- a/RobotLovesKitty.html
+++ b/RobotLovesKitty.html
@@ -27,10 +27,10 @@
 					<p id="label4">Social Media</p>
 				</div>
 				<div id="container3">
-					<iframe id="main_page" class="site_content" src="res/doc/main_page"></iframe>
-					<iframe id="games" class="site_content" src="res/doc/games"></iframe>
-					<iframe id="contact" class="site_content" src="res/doc/contact"></iframe>
-					<iframe id="socials" class="site_content" src="res/doc/socials"></iframe>
+					<iframe id="main_page" class="site_content" src="res/doc/main_page.html"></iframe>
+					<iframe id="games" class="site_content" src="res/doc/games.html"></iframe>
+					<iframe id="contact" class="site_content" src="res/doc/contact.html"></iframe>
+					<iframe id="socials" class="site_content" src="res/doc/social.html"></iframe>
 				</div>
 			</div>
 		</div>
